# gnapsis

./: .dockerignore  .env.example  .gitignore  .gnapsis.toml  .gnapsis.toml.example  .mcp.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  trello-project.toml
.claude/skills/build-knowledge-graph/: SKILL.md
.claude/skills/smoke-test/: SKILL.md
.github/workflows/: ci.yml
.nvim/explanations/: di-resolve-method.json  send-sync-issue.json  visualizer-eli5.json
bench/: .gitignore  analyze.py  judge.py  main.py  pyproject.toml  run.py  visualize.py
bench/config/: mcp-with-gnapsis.json
bench/tasks/: tasks.json
di-macros/: Cargo.toml
di-macros/src/: context.rs  from_context.rs  lib.rs
docker/: Dockerfile
docker/init/: 00-init-age.sql
docs/: architecture.md  stack.md
docs/benchmark/: NOTES.md  REPORT.md  RUBRICS.md
docs/benchmark/01/: REPORT.md  full_report.json  summary.csv  visualize.py
docs/benchmark/02/: full_report.json  summary.csv
docs/designs/: 001-taxonomy-tree.md  002-mcp-tools.md  003-implementation-plan.md  004-visualization-refactor.md  005-ontology-improvements.md
src/: config.rs  context.rs  di.rs  error.rs  git.rs  lib.rs  main.rs
src/cli/: embedding.rs  init.rs  mcp.rs  mod.rs  serve.rs  visualize.rs
src/graph/: cypher.pest  cypher.rs  macros.rs  mod.rs  query.rs  row.rs  traits.rs
src/graph/backends/: mod.rs  postgres.rs
src/mcp/: mod.rs  protocol.rs  server.rs
src/mcp/tools/: analysis.rs  entity.rs  mod.rs  project.rs  query.rs  reference.rs  sync.rs  taxonomy.rs  validation.rs
src/migrations/: m001_schema.rs  m002_seed_data.rs  m002_triggers.rs  m003_ontology_v2.rs  m003_seed_data.rs  m004_ontology_v2.rs  m004_ontology_v2_data.rs  m005_ontology_v2_data.rs  mod.rs  runner.rs  traits.rs
src/migrations/db/: m001_schema.rs  mod.rs
src/migrations/graph/: m001_seed_data.rs  m002_ontology_v2.rs  m003_ontology_v2_data.rs  mod.rs
src/models/: category.rs  document.rs  entity.rs  graph.rs  mod.rs  scope.rs
src/nvim/: client.rs  lazy.rs  mod.rs
src/repositories/: category.rs  document.rs  entity.rs  mod.rs  query.rs  schema.rs
src/services/: commands.rs  entity.rs  graph.rs  lsp.rs  mod.rs  validation.rs
src/tools/: mod.rs
src/visualization/: components.rs  constants.rs  graph.rs  mod.rs  nvim.rs  plugin.rs  resources.rs  setup.rs
src/visualization/systems/: camera.rs  interaction.rs  mod.rs  nvim.rs  physics.rs  ui.rs
tests/: postgres_integration.rs
