[workspace]
members = ["di-macros"]

[package]
name = "gnapsis"
version = "0.1.0"
edition = "2021"
description = "Code intelligence graph - MCP server for knowledge management with Neo4j"

[[bin]]
name = "gnapsis"
path = "src/main.rs"

[dependencies]
di-macros = { path = "di-macros" }
# CLI
clap = { version = "4", features = ["derive"] }

# MCP protocol
rmcp = { version = "0.9", features = ["server", "macros", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
color-eyre = "0.6"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Neo4j async driver
neo4rs = "0.8"

# Git operations
git2 = "0.19"

# ULID generation
ulid = "1"

# Embeddings abstraction
raggy = { git = "https://github.com/e7nd7r/raggy", features = ["fastembed"] }

# Async utilities
futures = "0.3"

# Lazy initialization
once_cell = "1"

# Better error handling
thiserror = "1"

# Async trait support
async-trait = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration with layered resolution
figment = { version = "0.10", features = ["toml", "env"] }

# Config directories
dirs = "5"

# 3D Visualization
bevy = { version = "0.15", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "tonemapping_luts",
    "x11",
    "wayland",
] }

# Temp files
tempfile = "3"

# msgpack for Neovim RPC
rmpv = "1"
