[workspace]
members = ["di-macros"]

[package]
name = "gnapsis"
version = "0.1.0"
edition = "2021"
description = "Code intelligence graph - MCP server for knowledge management"

[features]
default = []
integration = []  # Enable integration tests (requires running database)

[lib]
name = "gnapsis"
path = "src/lib.rs"

[[bin]]
name = "gnapsis"
path = "src/main.rs"

[dependencies]
di-macros = { path = "di-macros" }
# CLI
clap = { version = "4", features = ["derive"] }

# MCP protocol
rmcp = { version = "0.9", features = ["server", "macros", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TOON (Token-Oriented Object Notation) for efficient LLM output
serde_toon = "0.2"

# Error handling
color-eyre = "0.6"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git operations
git2 = "0.19"

# ULID generation
ulid = "1"

# Embeddings abstraction
raggy = { git = "https://github.com/e7nd7r/raggy", features = ["fastembed"] }

# Async utilities
futures = "0.3"
async-stream = "0.3"

# Lazy initialization
once_cell = "1"

# Better error handling
thiserror = "1"

# Async trait support
async-trait = "0.1"

# PostgreSQL + Apache AGE backend
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
bytes = "1"  # For agtype binary serialization

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration with layered resolution
figment = { version = "0.10", features = ["toml", "env"] }

# Config directories
dirs = "5"

# 3D Visualization
bevy = { version = "0.15", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "tonemapping_luts",
    "x11",
    "wayland",
] }

# Temp files
tempfile = "3"

# msgpack for Neovim RPC
rmpv = "1"

# Parser for Cypher RETURN clause extraction
pest = "2"
pest_derive = "2"

[dev-dependencies]
serial_test = "3.3.1"

